<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateContactActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/letter_background"
        android:padding="60dp"
        android:src="@drawable/ic_baseline_photo_camera_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        >

        <ImageView
            android:layout_width="46dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_baseline_person_24" />

        <EditText
            android:id="@+id/contactNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        >

        <ImageView
            android:layout_width="46dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_baseline_local_phone_24" />

        <EditText
            android:id="@+id/contactPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <ImageView
            android:layout_width="46dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_baseline_mail_24" />

        <EditText
            android:id="@+id/contactEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail" />
    </LinearLayout>


</LinearLayout>