<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactViewActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_baseline_how_to_reg_24"
        android:contentDescription="TODO" />
    <TextView
        android:id="@+id/contactNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lanterna_verde"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        />
    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="47dp"
                android:layout_marginLeft="10dp"
                android:layout_height="48dp"
                android:padding="5dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_baseline_local_phone_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/contactPhoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_template"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textAlignment="center"
                    android:textSize="10dp"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="47dp"
                android:layout_height="48dp"
                android:contentDescription="TODO"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_baseline_message_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="47dp"
                android:layout_marginLeft="10dp"
                android:layout_height="48dp"
                android:padding="5dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_baseline_message_24" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contactEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_gmail_com"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAlignment="center"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAlignment="center"
                android:textSize="10dp"
                />
        </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>